Add POST '/api/sale/intent'-endpoint
