# stregsystem/urls.py
@@ -46,4 +46,5 @@ urlpatterns = [
     re_path(r'^api/products/active_products$', views.get_active_items, name="api_active_products"),
     re_path(r'^api/products/category_mappings$', views.get_product_category_mappings, name="api_product_mappings"),
     re_path(r'^api/sale$', views.api_sale, name="api_sale"),
+    re_path(r'^api/sale/intent$', views.api_sale_intent, name="api_sale_intent"),
 ]
